--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,29 @@
 <resources>
-    <string name="app_name">DevIntensive</string>
+    <string name="app_name">Шраго Александр</string>
+
+    <!-- Contacts page info -->
+    <string name="header_rating">Рейтинг</string>
+    <string name="header_code_strings">Написано строк кода</string>
+    <string name="header_projects">Проектов</string>
+
+    <string name="contacts_mobile">Мобильный</string>
+    <string name="contacts_email">E-mail</string>
+    <string name="contacts_vk">Профиль в VK</string>
+    <string name="contacts_repo">Репозиторий</string>
+    <string name="contacts_about">О себе</string>
+
+
+    <!-- Temporary volumes of contacts page info -->
+    <string name="header_rating_vol">6</string>
+    <string name="header_code_strings_vol">36000</string>
+    <string name="header_projects_vol">6</string>
+
+    <string name="contacts_mobile_vol">+7 (903) 000-00-00</string>
+    <string name="contacts_email_vol">alexshr@yandex.ru</string>
+    <string name="contacts_vk_vol">vk.com/alexshr</string>
+    <string name="contacts_repo_vol">https://github.com/alexshr/DevIntensive</string>
+    <string name="contacts_about_vol">Lorem ipsum dolor sit amet, consectitur adipiscing elit.
+        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
+        lectus, ac blandit elit
+    </string>
 </resources>
