Hometask_3 cо всеми доп. задачами,  существенные изменения  по верстке из Hometask 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,12 @@
     <string name="contacts_repo_vol">https://github.com/alexshr/DevIntensive</string>
     <string name="contacts_about_vol">Lorem ipsum dolor sit amet, consectitur adipiscing elit.
         Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
-        lectus, ac blandit elit
+        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
+        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
+        lectus, ac blandit elit. Lorem ipsum dolor sit amet, consectitur adipiscing elit.
+        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
+        lectus, ac blandit elit.Lorem ipsum dolor sit amet, consectitur adipiscing elit.
+        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
+        lectus, ac blandit elit.
     </string>
 </resources>
