hometask_6 без детализации списка, локальная промеж. версия

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,8 @@
     <string name="error_no_network">Сеть недоступна,попробуйте позже</string>
     <string name="error_server">Ошибка сервера</string>
     <string name="error_upload_photo">Не удалось загрузить фото на сервер</string>
+    <string name="show_details">ПРОСМОТР</string>
+    <string name="search_title">поиск</string>
 
 
     <string-array name="profile_placeHolder_loadPhotoDialog">
