исправление смешной ошибки в названии

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">НеШраго Александр</string>
+    <string name="app_name">Шраго Александр</string>
 
 
     <string name="header_rating">Рейтинг</string>
