--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,16 +13,12 @@
     <string name="contacts_about">О себе</string>
 
 
-
-
-
     <string name="change_profile_photo">Изменить фотографию профиля</string>
 
 
     <string name="auth_enter">Войти</string>
     <string name="auth_email">E-mail</string>
     <string name="auth_pass">Пароль</string>
-
 
 
     <string name="allow">Разрешить</string>
@@ -62,7 +58,6 @@
     </string-array>
 
 
-
     <!-- test volumes of contacts page info -->
     <string name="header_test_rating_vol">6</string>
     <string name="header_test_code_strings_vol">36000</string>
@@ -88,6 +83,11 @@
     <string name="error_no_user_list">Не получен список пользователей</string>
     <string name="enter_user_name">Введите имя пользователя</string>
     <string name="splash_text">***DeveloperIntensive***</string>
+    <string name="refresh_title">обновить с сервера</string>
+    <string name="error_login_password">неверный логин или пароль</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
